Bug 408442 - Fuzziness slider on the Magic Wand tool increases when dragging left past zero
Summary: Fuzziness slider on the Magic Wand tool increases when dragging left past zero
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.2.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-08 01:41 UTC by jimbo
Modified: 2019-06-13 06:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jimbo 2019-06-08 01:41:04 UTC
SUMMARY
Fuzziness slider on the Magic Wand tool increases when dragging left past zero

STEPS TO REPRODUCE
1. Select Magic Wand Tool
2. Click + Drag on the fuzziness slider, keep dragging left

OBSERVED RESULT
Slider value goes to zero and counts up again

EXPECTED RESULT
Slider value should go to zero and stop

SOFTWARE/OS VERSIONS
Windows: Windows 7 Professional 64 bit
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
This is the only slider that shows this behaviour in the Magic Wand Tool Options panel. The other sliders work as expected.
Comment 1 vanyossi 2019-06-09 01:30:12 UTC
Git commit e4c9d1623ed4eed5ed4f7643d603ee91cd1aad4c by Ivan Yossi.
Committed on 09/06/2019 at 01:27.
Pushed by ivany into branch 'master'.

Avoid going positive on negative x with even exponentials ratios

M  +2    -1    libs/ui/widgets/kis_slider_spin_box.cpp

https://invent.kde.org/kde/krita/commit/e4c9d1623ed4eed5ed4f7643d603ee91cd1aad4c
Comment 2 Halla Rempt 2019-06-13 06:33:17 UTC
Git commit dd1473ec5471ecec6663618d0637ec51007c859f by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 13/06/2019 at 06:00.
Pushed by rempt into branch 'krita/4.2'.

Avoid going positive on negative x with even exponentials ratios

M  +2    -1    libs/ui/widgets/kis_slider_spin_box.cpp

https://invent.kde.org/kde/krita/commit/dd1473ec5471ecec6663618d0637ec51007c859f