Avoid going positive on negative x with even exponentials ratios

BUG:408442